2010-11-18  Jeff Law  <law@redhat.com>

	PR middle-end-optimization/46297
	* postreload.c (reload_combine_note_store): Deal with embedded
	side effects in MEM expressions.

2010-11-18  Richard Guenther  <rguenther@suse.de>

	PR lto/45089
	* dwarf2out.c (add_AT_die_ref): Work around LTO losing types
	when checking is not enabled.

2010-11-18  Richard Guenther  <rguenther@suse.de>

	PR lto/46525
	* gimple.c (gimple_register_type): Update TYPE_MAIN_VARIANT of
	type leaders.
	(gimple_register_canonical_type): Also cache the canoncial type
	for non type leaders.

2010-11-18  Richard Guenther  <rguenther@suse.de>

	* lto-wrapper.c (run_gcc): Fix -flto=N parsing.

2010-11-18  Alexander Monakov  <amonakov@ispras.ru>

	PR middle-end/46518
	* sel-sched-ir.c (init_expr): Use the correct type for
	target_available.
	* sel-sched.c (fill_vec_av_set): Use explicitly signed char type.

2010-11-17  Joakim Tjernlund  <Joakim.Tjernlund@transmode.se>

	* config/rs6000/sysv4.h (SUBTARGET_OVERRIDE_OPTIONS): Support -fpic
	as well as -mrelocatable at the same time.

2010-11-17  Quentin Neill  <quentin.neill.gnu@gmail.com>

	PR target/46422
	* config/i386/bmiintrin.h (__lzcnt_u16, __lzcnt_u32, __lzcnt_u64):
	Call the clz builtin.

2010-11-17  Dinar Temirbulatov <dtemirbulatov@gmail.com>
	    Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/31490
	* varasm.c (categorize_decl_for_section): Ignore reloc_rw_mask
	if section attribute used.

2010-11-17  Jan Hubicka  <jh@suse.cz>

	* builtins.c (expand_builtin_mathfn_2, expand_builtin_mathfn): Do not
	expand errno setting variant when optimizing for size.

2010-11-17  Eric Botcazou  <ebotcazou@adacore.com>

	* postreload.c (reload_combine): Call control_flow_insn_p only once.
	Reverse backward loop.  Fix formatting issues.

2010-11-17  Paolo Bonzini  <bonzini@gnu.org>

	* c-parser.c (c_token_is_qualifier,
	c_parser_next_token_is_qualifier): New.
	(c_parser_declaration_or_fndef, c_parser_struct_declaration):